force-app/main/default/objects/API_Configuration__c/API_Configuration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>API keys and parameters required for Microservice calls</description>
    <label>API Configuration</label>
</CustomObject>