force-app/main/default/objects/API_Configuration__c/fields/API_Host__c.field-meta.xml
<CustomField>
    <fullName>API_Host__c</fullName>
    <description>The base URL for all API calls</description>
    <inlineHelpText>The base URL for all API calls</inlineHelpText>
    <label>API Host</label>
    <length>60</length>
    <type>Text</type>
</CustomField>