force-app/main/default/objects/API_Configuration__c/fields/API_Key__c.field-meta.xml
<CustomField>
    <fullName>API_Key__c</fullName>
    <description>The API Key</description>
    <inlineHelpText>The API Key</inlineHelpText>
    <label>API Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>