force-app/main/default/objects/API_Configuration__c/fields/Customer_Create__c.field-meta.xml
<CustomField>
    <fullName>Customer_Create__c</fullName>
    <description>The URL suffix for the User Create service</description>
    <inlineHelpText>The URL suffix for the User Create service</inlineHelpText>
    <label>Customer Create</label>
    <length>30</length>
    <type>Text</type>
</CustomField>