force-app/main/default/objects/API_Configuration__c/fields/Customer_Delete__c.field-meta.xml
<CustomField>
    <fullName>Customer_Delete__c</fullName>
    <label>Customer Delete</label>
    <length>50</length>
    <type>Text</type>
</CustomField>