force-app/main/default/objects/API_Configuration__c/fields/Customer_Overview__c.field-meta.xml
<CustomField>
    <fullName>Customer_Overview__c</fullName>
    <description>Endpoint for read only customer overview items (from responsys and coniq..etc)</description>
    <inlineHelpText>Endpoint for read only customer overview items (from responsys and coniq..etc)</inlineHelpText>
    <label>Customer Overview</label>
    <length>50</length>
    <type>Text</type>
</CustomField>