force-app/main/default/objects/API_Configuration__c/fields/Customer_Read__c.field-meta.xml
<CustomField>
    <fullName>Customer_Read__c</fullName>
    <description>The URL suffix for the Customer Read by Reference service</description>
    <inlineHelpText>The URL suffix for the User Read by Reference service</inlineHelpText>
    <label>Customer Read</label>
    <length>30</length>
    <type>Text</type>
</CustomField>