force-app/main/default/objects/API_Configuration__c/fields/Customer_Read_GUID__c.field-meta.xml
<CustomField>
    <fullName>Customer_Read_GUID__c</fullName>
    <description>The URL suffix for the Customer Read using GUID service</description>
    <inlineHelpText>The URL suffix for the Customer Read using GUID service</inlineHelpText>
    <label>Customer Read GUID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>