force-app/main/default/objects/API_Configuration__c/fields/Debug_Mode__c.field-meta.xml
<CustomField>
    <fullName>Debug_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate whether api calls should be logged.</description>
    <inlineHelpText>Flag to indicate whether api calls should be logged.</inlineHelpText>
    <label>Debug Mode</label>
    <type>Checkbox</type>
</CustomField>