force-app/main/default/objects/API_Configuration__c/fields/Email_Change__c.field-meta.xml
<CustomField>
    <fullName>Email_Change__c</fullName>
    <description>End point suffix for Email Change service</description>
    <inlineHelpText>End point suffix for Email Change service</inlineHelpText>
    <label>Email Change</label>
    <length>50</length>
    <type>Text</type>
</CustomField>