force-app/main/default/objects/API_Configuration__c/fields/Enum_Read__c.field-meta.xml
<CustomField>
    <fullName>Enum_Read__c</fullName>
    <description>The URL suffix for the Enumerator Read service</description>
    <inlineHelpText>The URL suffix for the Enumerator Read service</inlineHelpText>
    <label>Enum Read</label>
    <length>30</length>
    <type>Text</type>
</CustomField>