force-app/main/default/objects/API_Configuration__c/fields/Lease_List__c.field-meta.xml
<CustomField>
    <fullName>Lease_List__c</fullName>
    <description>End-point to return list of lease details for a given Brand/Village</description>
    <inlineHelpText>End-point to return list of lease details for a given Brand/Village</inlineHelpText>
    <label>Lease List</label>
    <length>30</length>
    <type>Text</type>
</CustomField>