force-app/main/default/objects/API_Configuration__c/fields/Lookup_Read__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Read__c</fullName>
    <description>The URL suffix for the Customer API Lookup Read services (genders, villages ..etc)</description>
    <inlineHelpText>The URL suffix for the Customer API Lookup Read services (genders, villages ..etc)</inlineHelpText>
    <label>Lookup Read</label>
    <length>50</length>
    <type>Text</type>
</CustomField>