force-app/main/default/objects/API_Configuration__c/fields/Preference_Create__c.field-meta.xml
<CustomField>
    <fullName>Preference_Create__c</fullName>
    <label>Preference Create</label>
    <length>50</length>
    <type>Text</type>
</CustomField>