force-app/main/default/objects/API_Configuration__c/fields/Preference_Read__c.field-meta.xml
<CustomField>
    <fullName>Preference_Read__c</fullName>
    <label>Preference Read</label>
    <length>50</length>
    <type>Text</type>
</CustomField>