force-app/main/default/objects/API_Configuration__c/fields/Read_HNW_Purchases__c.field-meta.xml
<CustomField>
    <fullName>Read_HNW_Purchases__c</fullName>
    <description>Endpoint to retrieve VIP Card Purchase information via VIP Card Code</description>
    <label>Read HNW Purchases</label>
    <length>50</length>
    <type>Text</type>
</CustomField>